welcome.lessons.welcome.array.has271.Has271.scala.error
has271:5: error: not found: value Maths
			if( Maths.abs(nums(k)-nums(k+2))<2) {
                            ^