welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
	var j:Int=0
	for (k<-0 to nums.length-3){
		if((nums(k)+5)==nums(k+1)  ){
			if( Maths.abs(nums(k)-nums(k+2))<2) {
			j =j+1
			}
		}else{
			j = 0
		}
	}

	//if((indexOfValue(nums,2)+1)==indexOfValue(nums,7) && nums(indexOfValue(nums,7)+1)==3 ){
	//	return true
	//}
	//if((indexOfValue(nums,2)+1)==indexOfValue(nums,7) && nums(indexOfValue(nums,7)+1)==2 ){
	//	return true
	///}
	//if((indexOfValue(nums,2)+1)==indexOfValue(nums,7) && nums(indexOfValue(nums,7)+1)==0 ){
	//	return true
	//}
	//if((indexOfValue(nums,2)+1)==indexOfValue(nums,7) && nums(indexOfValue(nums,7)+1)==(-1) ){
	//	return true
	//}

	


	if(j!=0){
		return true
	}else{
		return false
	}
}


def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var i = 0
	while(i < nums.length && nums(i) != value){
  	i = i + 1
  }
  if(i < nums.length){
  	return i 
  }else{
  	return -1
  }
}




